# ChessClock

./: .gitattributes  .gitignore  .gitmodules  Architecture.md  Building.md  CMakeLists.txt  Features.md  LICENSE  Readme.md  Todo.md  bashrc  build-and-run  run
CMake/: AddBoost.cmake
ChessClock/: .gitignore  CMakeLists.txt  Cppcheck.cppcheck  Readme.md
ChessClock-SDL/: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  enter  run
ChessClock-SDL/Include/: ResourceManager.hpp
ChessClock-SDL/Include/ChessClock/: Component.hpp  Config.hpp  Context.hpp  EResourceType.hpp  Font.hpp  ForwardReferences.hpp  Logger.hpp  MetaData.hpp  Object.hpp  Rect.hpp  Renderer.hpp  Resource.hpp  ResourceBase.hpp  ResourceId.hpp  ResourceLoader.hpp  ResourceManager.hpp  SDL.hpp  SDL_ttf.hpp  Sprite.hpp  Template.hpp  TestScene.hpp  Text.hpp  Texture.hpp  Transform.hpp  Vector2.hpp  ssfn.h
ChessClock-SDL/Include/Gambit/: Button.hpp  Component.hpp  Context.hpp  EResourceType.hpp  Event.hpp  Exceptions.hpp  Font.hpp  ForwardReferences.hpp  Logger.hpp  NumberFont.hpp  Object.hpp  Rect.hpp  Renderer.hpp  Resource.hpp  ResourceId.hpp  ResourceLoader.hpp  ResourceManager.hpp  Scene.hpp  Sprite.hpp  TestScene.hpp  Text.hpp  Texture.hpp  Transform.hpp  Vector2.hpp
ChessClock-SDL/Source/: Button.cpp  Context.cpp  Font.cpp  FortyTwo.cpp  Logger.cpp  NumberFont.cpp  Object.cpp  Rect.cpp  Renderer.cpp  ResourceBase.cpp  ResourceManager.cpp  Sprite.cpp  TestScene.cpp  Texture.cpp  Transform.cpp  main.cpp
ChessClock-SDL/Source/Test/: CMakeLists.txt  TestEvents.cpp  TestMain.cpp  TestTransform.cpp
ChessClock-SDL/conf/: bashrc-pi
ChessClock/Assets/App/: ClockButton.cs  EGameState.cs  FrameRateDisplay.cs  Game.cs  PlayPause.cs  PlayPauseButton.cs  RandomWanderRotation.cs  SpinObject.cs  Timer.cs  TimerControl.cs  TimerPanel.cs
ChessClock/Assets/New UI Widgets/: changelog.txt  readme.txt
ChessClock/Assets/New UI Widgets/Editor/: ColorHSVPropertyDrawer.cs  ConditionalEditor.cs  ConditionalFieldInfo.cs  ConditionalPropertyDrawer.cs  ContextMenuEditor.cs  ContextMenuWindow.cs  CursorsEditor.cs  DragSupportEditor.cs  EasyLayoutEditor.cs  EasyLayoutEllipseSettingsPropertyDrawer.cs  ListViewEditor.cs  ListViewIconsEditor.cs  ListViewPaginatorEditor.cs  ProjectSettings.cs  ResizableEditor.cs  ScrollRectPaginatorEditor.cs  SelectableHelperEditor.cs  SpinnerEditor.cs  SpinnerFloatEditor.cs  SplitterEditor.cs  SwitchEditor.cs  TableHeaderEditor.cs  ThirdPartySupportMenuOptions.cs  TreeViewDataSourceEditor.cs  TreeViewDataSourceWindow.cs
ChessClock/Assets/New UI Widgets/Examples/Accordion/: Accordion.unity  AccordionTestToggle.cs
ChessClock/Assets/New UI Widgets/Prefabs/: Accordion.prefab  ScrollRectNumericPaginator.prefab  ScrollRectPaginator.prefab
ChessClock/Assets/New UI Widgets/Scripts/: ITemplatable.cs  Templates.cs  Tooltip.cs
ChessClock/Assets/New UI Widgets/Shaders/: UIRipple.shader  UIWidgets.cginc
ChessClock/Assets/Prefabs/: LoserText.prefab  Timer.prefab  WinnerText.prefab
ChessClock/Assets/Resources/: LichessToken.txt
ChessClock/Assets/Scenes/: MainGameScene.unity  MainScene.unity  SampleScene.unity  SetupScene.unity
ChessClock/Builds/: install
ChessClock/Include/ChessClock/: Config.hpp  EColor.hpp  EGameState.hpp  EPage.hpp  ESide.hpp  ForwardReferences.hpp  Game.hpp  GameAbout.hpp  GameBase.hpp  GamePlaying.hpp  GameRoot.Values.hpp  GameRoot.hpp  GameSettings.hpp  GameSplash.hpp  Global.hpp  Lichess.hpp  MainScene.Values.hpp  MainScene.hpp  Navigation.hpp  Page.hpp  PageAbout.hpp  PageBase.hpp  PageFisherChess.hpp  PagePlaying.hpp  PageSettings.hpp  PageSplash.hpp  Piece.hpp  Player.hpp  PlayerTime.hpp  Root.hpp  SceneBase.hpp  SceneSplash.hpp  SplashScene.Values.hpp  SplashScene.hpp  TestScene.hpp  ThemeMeta.hpp  TimeControl.hpp  UiCallBacks.hpp  Values.hpp
ChessClock/ProjectSettings/: EditorBuildSettings.asset
ChessClock/Resources/: .gitignore  AdobeFanHeitiStd-Bold.otf.json  Atlas_lichess.json  Readme.md  Readme.md.json  main.json
ChessClock/Resources/Lichess/: Atlas_lichess.json  atlas.json  meta.json  scene_playing.json  scene_test.json
ChessClock/Resources/Lichess/scenes/: game_over.json  playing.json  settings.json  splash.json
ChessClock/Source/: Game.cpp  GameAbout.cpp  GameBase.cpp  GamePlaying.cpp  GameRoot.ProcessEvents.cpp  GameRoot.cpp  GameSettings.cpp  GameSplash.cpp  Global.cpp  Lichess.cpp  Main.cpp  MainScene.ProcessEvents.cpp  MainScene.cpp  Navigation.cpp  PageAbout.cpp  PageBase.cpp  PageFisherChess.cpp  PagePlaying.cpp  PageSettings.cpp  PageSplash.cpp  Player.cpp  PlayerTime.cpp  Readme.md  Root.cpp  SceneSplash.cpp  SplashScene.Values.hpp  SplashScene.cpp  TestScene.cpp  ThemeMeta.cpp  UiCallBacks.cpp
ChessClock/Source/Win32/: MainScene.ProcessEvents.cpp
ChessClock/Test/: CMakeLists.txt  Readme.md  TestClock.cpp  TestContext.cpp  TestMain.cpp
ChessClock/UserSettings/: EditorUserSettings.asset
Gambit/: CMakeLists.txt  Readme.md
Gambit/Include/Gambit/: Atlas.hpp  AudioAtlas.hpp  AudioClip.hpp  Button.hpp  Color.hpp  Config.hpp  Context.hpp  ELogLevel.hpp  EResourceType.hpp  Exceptions.hpp  Font.hpp  ForwardReferences.hpp  GameBase.hpp  Gobal.hpp  Gravatar.hpp  JsonReader.hpp  Logger.hpp  MetaData.hpp  NonCopyable.hpp  NumberFont.hpp  Object.hpp  Rect.hpp  Renderer.hpp  Resource.hpp  ResourceBase.hpp  ResourceId.hpp  ResourceLoader.hpp  ResourceManager.hpp  Scene.hpp  SceneBase.hpp  ShadowedNumberFont.hpp  Sprite.hpp  StringUtil.hpp  TeeStream.hpp  Template.hpp  Texture.hpp  Time.hpp  TimerFont.hpp  Transform.hpp  Vector2.hpp
Gambit/Include/Gambit/Detail/: HashStringColorPair.hpp
Gambit/Source/: Atlas.cpp  AudioAtlas.cpp  AudioClip.cpp  Context.cpp  Font.cpp  Gravatar.cpp  Http.cpp  JsonReader.cpp  Logger.cpp  NumberFont.cpp  Object.cpp  Rect.cpp  Renderer.cpp  ResourceBase.cpp  ResourceManager.cpp  Scene.cpp  Sprite.cpp  StringUtil.cpp  TestScene.cpp  Texture.cpp  Time.cpp  TimerFont.cpp  Transform.cpp
Gambit/Source/Test/: TestEvents.cpp
Gambit/Test/: CMakeLists.txt  TestEvents.cpp  TestScene.cpp  TestTransform.cpp
(+1050 files in other folders)
